# presidio-hardened-scoutsuite

./: .dockerignore  .gitignore  .presidio-scout-targets.toml.example  .presidio-scout.toml.example  Dockerfile  LICENSE  PRESIDIO-REQ.md  README.md  SCOUTSUITE-DEPENDENCY-POLICY.md  SECURITY.md  pyproject.toml  scout-policy.toml.example
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml  release.yml  sbom.yml  scout-upgrade.yml
LICENSES/: README.md
deploy/helm/presidio-scout/: Chart.yaml  values.yaml
deploy/helm/presidio-scout/templates/: NOTES.txt  _helpers.tpl  networkpolicy.yaml  serviceaccount.yaml  workload.yaml
deploy/kubernetes/: README.md  cronjob.yaml  job.yaml  networkpolicy.yaml  serviceaccount.yaml
docs/adr/: 0001-scoutsuite-runtime-release-strategy.md
iam/aws/: README.md  least-privilege-audit-policy.json  trust-policy.json
iam/azure/: README.md  presidio-scout-reader-role.json
iam/gcp/: README.md  presidio-scout-auditor-role.yaml
src/presidio_scoutsuite/: __init__.py  asff.py  assertions.py  attestation.py  cli.py  compliance.py  compose.py  config.py  credentials.py  diff.py  errors.py  evidence.py  extensions.py  findings.py  launcher.py  manifest.py  notify.py  orchestrate.py  provenance.py  redact.py  remediation.py  report_guard.py  ruleset.py  sarif.py  scout_integrity.py  summary.py  trend.py  upgrade.py  verify.py  version.py  vuln.py  waivers.py
src/presidio_scoutsuite/policy/: __init__.py  aliyun-cis.json  aliyun.controls.json  aliyun.evidence.json  aliyun.rules.txt  aws-cis.json  aws.controls.json  aws.evidence.json  aws.remediation.json  aws.rules.txt  azure-cis.json  azure.controls.json  azure.evidence.json  azure.remediation.json  azure.rules.txt  gcp-cis.json  gcp.controls.json  gcp.evidence.json  gcp.remediation.json  gcp.rules.txt  oci-cis.json  oci.controls.json  oci.evidence.json  oci.rules.txt  provenance-policy.json
tests/: test_asff.py  test_assertions.py  test_attestation.py  test_cli.py  test_compliance.py  test_compose.py  test_config.py  test_credentials.py  test_deploy_manifests.py  test_diff.py  test_evidence.py  test_extensions.py  test_findings.py  test_launcher.py  test_manifest.py  test_notify.py  test_orchestrate.py  test_packaging.py  test_provenance.py  test_redact.py  test_remediation.py  test_report_guard.py  test_ruleset.py  test_sarif.py  test_scout_integrity.py  test_summary.py  test_trend.py  test_upgrade.py  test_verify.py  test_vuln.py  test_waivers.py
tests/interop/: scout-evidence-aws.json  scout-evidence-aws.notes.json  scout-evidence-aws.trust.json
