[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "presidio-hardened-scoutsuite"
version = "0.1.0"
description = "Presidio security-hardened distribution of ScoutSuite — runs the multi-cloud auditor out of process with hardened defaults, report redaction, and a least-privilege deployment model."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Presidio" }]
keywords = ["scoutsuite", "cloud-security", "aws", "azure", "gcp", "hardening", "audit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]

# Intentionally NO runtime dependency on ScoutSuite: it is driven out of process
# (a subprocess, never imported), which keeps this wrapper a separate, non-
# derivative work and lets it ship under MIT. Install ScoutSuite (GPL-2.0)
# separately, or use the bundled container image.
dependencies = []

[project.optional-dependencies]
# Convenience extra that pulls in a pinned ScoutSuite. NOTE: ScoutSuite is
# GPL-2.0 — installing this extra brings GPL software into your environment.
scoutsuite = ["ScoutSuite==5.14.0"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6"]

[project.scripts]
presidio-scout = "presidio_scoutsuite.cli:main"

[project.urls]
Homepage = "https://github.com/presidio-v/presidio-hardened-scoutsuite"
Source = "https://github.com/presidio-v/presidio-hardened-scoutsuite"
Upstream = "https://github.com/nccgroup/ScoutSuite"

[tool.hatch.build.targets.wheel]
packages = ["src/presidio_scoutsuite"]

[tool.hatch.build.targets.wheel.force-include]
"src/presidio_scoutsuite/policy" = "presidio_scoutsuite/policy"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["presidio_scoutsuite"]
branch = true

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
