[build-system]
# Pin the build backend so the wheel/sdist are a deterministic function of the
# source across environments (the reproducible-build CI gate depends on this);
# Dependabot bumps it.
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "presidio-hardened-scoutsuite"
version = "0.27.0"
description = "Presidio security-hardened distribution of ScoutSuite — runs the multi-cloud auditor out of process with hardened defaults, report redaction, and a least-privilege deployment model."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Presidio" }]
keywords = ["scoutsuite", "cloud-security", "aws", "azure", "gcp", "hardening", "audit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]

# Intentionally NO runtime dependency on ScoutSuite: it is driven out of process
# (a subprocess, never imported), which keeps this wrapper a separate, non-
# derivative work and lets it ship under MIT. Install ScoutSuite (GPL-2.0)
# separately, or use the bundled container image.
#
# The only runtime dependency is the tiny `tomli` TOML parser, and only on
# Python < 3.11 (3.11+ uses the stdlib `tomllib`) — for reading the optional
# `.presidio-scout.toml` org config.
dependencies = [
  "tomli >= 2.0 ; python_version < '3.11'",
]

[project.optional-dependencies]
# Convenience extra that pulls in a pinned ScoutSuite. NOTE: ScoutSuite is
# GPL-2.0 — installing this extra brings GPL software into your environment.
scoutsuite = ["ScoutSuite==5.14.0"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6"]

[project.scripts]
presidio-scout = "presidio_scoutsuite.cli:main"
presidio-scout-validate = "presidio_scoutsuite.ruleset:_main"
presidio-scout-verify = "presidio_scoutsuite.verify:_main"
presidio-scout-verify-provenance = "presidio_scoutsuite.provenance:_main"
presidio-scout-findings = "presidio_scoutsuite.findings:_main"
presidio-scout-export = "presidio_scoutsuite.sarif:_main"
presidio-scout-attest = "presidio_scoutsuite.attestation:_main"
presidio-scout-diff = "presidio_scoutsuite.diff:_main"
presidio-scout-vuln-gate = "presidio_scoutsuite.vuln:_main"
presidio-scout-policy = "presidio_scoutsuite.config:_main"
presidio-scout-upgrade = "presidio_scoutsuite.upgrade:_main"
presidio-scout-compliance = "presidio_scoutsuite.compliance:_main"
presidio-scout-asff = "presidio_scoutsuite.asff:_main"
presidio-scout-orchestrate = "presidio_scoutsuite.orchestrate:_main"
presidio-scout-notify = "presidio_scoutsuite.notify:_main"
presidio-scout-trend = "presidio_scoutsuite.trend:_main"
presidio-scout-remediate = "presidio_scoutsuite.remediation:_main"
presidio-scout-assert = "presidio_scoutsuite.assertions:_main"
presidio-scout-summary = "presidio_scoutsuite.summary:_main"
presidio-scout-ext = "presidio_scoutsuite.extensions:_main"

[project.urls]
Homepage = "https://github.com/presidio-v/presidio-hardened-scoutsuite"
Source = "https://github.com/presidio-v/presidio-hardened-scoutsuite"
Upstream = "https://github.com/nccgroup/ScoutSuite"

[tool.hatch.build.targets.wheel]
packages = ["src/presidio_scoutsuite"]
# The curated baselines + rule manifests under policy/ are package data; they are
# included automatically because policy/ lives inside the package. (Globs are
# listed explicitly so a stray data extension can't be silently dropped.)
artifacts = [
  "src/presidio_scoutsuite/policy/*.json",
  "src/presidio_scoutsuite/policy/*.rules.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["presidio_scoutsuite"]
branch = true

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
